<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="shortcutId1"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher_round"
        android:shortcutShortLabel="@string/app_name"
        android:shortcutLongLabel="@string/app_name"
        android:shortcutDisabledMessage="@string/disable">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.sunflower_jm"
            android:targetClass="com.example.sunflower_jm.view.main.MainActivity" />
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>
    <shortcut
        android:shortcutId="shortcutId2"
        android:enabled="true"
        android:icon="@drawable/add"
        android:shortcutShortLabel="@string/add_item"
        android:shortcutLongLabel="@string/app_name"
        android:shortcutDisabledMessage="@string/disable">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.sunflower_jm"
            android:targetClass="com.example.sunflower_jm.view.add.AddItemActivity" />
        <categories android:name="android.shortcut.conversation" />
        <capability-binding android:key="actions.intent.CREATE_MESSAGE" />
    </shortcut>
</shortcuts>
